--- a/style.css
+++ b/style.css
@@ -123,7 +123,6 @@
 }
 
 .secondDiv > p {
-    
     width: 960px;
     height: 166px;
     left: 220px;
@@ -147,10 +146,10 @@
     top: 963px;
 
     background: #333333;
+    border: 1px solid black;
 
     display: flex;
     flex-direction: column; 
-    
     align-items: center;
 }
 
