feat: criando div itens

--- a/style.css
+++ b/style.css
@@ -162,3 +162,10 @@
     color: #DEB959;
     margin-top: 5px;
 }
+
+.itens {
+    width: 960px;
+    height: 428px;
+    left: 219px;
+    top: 1073px;
+}
