--- a/style.css
+++ b/style.css
@@ -168,4 +168,37 @@
     height: 428px;
     left: 219px;
     top: 1073px;
+
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row; 
+    align-items: center;
+}
+
+.protecao {
+    width: 195px;
+    height: 428px;
+    left: 219px;
+    top: 1073px;
+}
+
+.carinho {
+    width: 195px;
+    height: 428px;
+    left: 219px;
+    top: 1073px;
+}
+
+.companheirismo {
+    width: 195px;
+    height: 428px;
+    left: 219px;
+    top: 1073px;
+}
+
+.resgate {
+    width: 195px;
+    height: 428px;
+    left: 219px;
+    top: 1073px;
 }
