feat: adc foto, título e texto às div de itens

--- a/style.css
+++ b/style.css
@@ -192,6 +192,11 @@
     height: 428px;
     left: 219px;
     top: 1073px;
+
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column; 
+    align-items: center;
 }
 
 .companheirismo {
@@ -199,6 +204,11 @@
     height: 428px;
     left: 219px;
     top: 1073px;
+
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column; 
+    align-items: center;
 }
 
 .resgate {
@@ -206,20 +216,25 @@
     height: 428px;
     left: 219px;
     top: 1073px;
+
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column; 
+    align-items: center;
 }
 
-.tituloProtecao {
+.tituloItens {
     font-family: 'Courier New', Courier, monospace;
     font-weight: bolder;
     font-style: normal;
-    font-size: 34px;
+    font-size: 20px;
     line-height: 46px;
     text-align: center;
 
     color: #FFFFFF;
 }
 
-.textoProtecao {
+.textoItens {
     width: 195px;
     height: 140px;
     left: 219px;
