--- a/style.css
+++ b/style.css
@@ -175,43 +175,7 @@
     align-items: center;
 }
 
-.protecao {
-    width: 195px;
-    height: 428px;
-    left: 219px;
-    top: 1073px;
-
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: column; 
-    align-items: center;
-}
-
-.carinho {
-    width: 195px;
-    height: 428px;
-    left: 219px;
-    top: 1073px;
-
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: column; 
-    align-items: center;
-}
-
-.companheirismo {
-    width: 195px;
-    height: 428px;
-    left: 219px;
-    top: 1073px;
-
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: column; 
-    align-items: center;
-}
-
-.resgate {
+.eachItem {
     width: 195px;
     height: 428px;
     left: 219px;
