--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+h1 {
+    font-family:'Courier New', Courier, monospace;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 65px;
+    color: #DEB959;
+    margin-top: 5px;
+}
+
 .cabeca {
     width: 1400px;
     height: 130px;
@@ -112,16 +122,6 @@
     align-items: center;
 }
 
-.sobre {
-    font-family:'Courier New', Courier, monospace;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 48px;
-    line-height: 65px;
-    color: #DEB959;
-    margin-top: 5px;
-}
-
 .secondDiv > p {
     width: 960px;
     height: 166px;
@@ -151,16 +151,6 @@
     display: flex;
     flex-direction: column; 
     align-items: center;
-}
-
-.valores {
-    font-family:'Courier New', Courier, monospace;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 48px;
-    line-height: 65px;
-    color: #DEB959;
-    margin-top: 5px;
 }
 
 .itens {
