--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1 {
     position: absolute;
     width: 277px;
     height: 65px;
-    left: 549px;
+    left: 500px;
     top: 1618px;
 
     font-family:'Courier New', Courier, monospace;
@@ -222,4 +222,14 @@ h1 {
     text-align: center;
 
     color: #FFFFFF;
+}
+
+.fourthDiv {
+    position: absolute;
+    width: 1039px;
+    height: 789px;
+    left: 180px;
+    top: 1723px;
+
+    border: 1px solid black;
 }
