feat: criando duas divs para cada lobo

--- a/style.css
+++ b/style.css
@@ -233,3 +233,15 @@ h1 {
 
     border: 1px solid black;
 }
+
+.firstWolf {
+    width: 991px;
+    height: 361px;
+    border: 1px solid black;
+}
+
+.secondWolf {
+    width: 991px;
+    height: 361px;
+    border: 1px solid black;
+}
