--- a/style.css
+++ b/style.css
@@ -275,6 +275,11 @@ h1 {
     top: 20.36%;
     bottom: 42.55%;
     border: 1px solid black;
+
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column; 
+    align-items: flex-start;
 }
 
 .local {
@@ -288,8 +293,8 @@ h1 {
 }
 
 .tel {
-    width: 378px;
-    height: 30px;
+    width: 153px;
+    height: 15px;
     left: 36.57%;
     right: 52.5%;
     top: 37.45%;
@@ -298,8 +303,8 @@ h1 {
 }
 
 .email {
-    width: 378px;
-    height: 30px;
+    width: 205px;
+    height: 15px;
     left: 36.5%;
     right: 48.86%;
     top: 52%;
