--- a/style.css
+++ b/style.css
@@ -24,3 +24,18 @@ header a {
     font-family: "Darker Grotesque", sans-serif;
     position: relative;
 }
+
+header a::after {
+    content: " ";
+    width: 0%;
+    height: 3px;
+    background-color: #000;
+    position: absolute;
+    left: 0;
+    bottom: -4px;
+    transition: 0.5s ease-in-out;
+}
+
+header a:hover::after {
+    width: 100%;
+}
