--- a/style.css
+++ b/style.css
@@ -39,3 +39,14 @@ header a::after {
 header a:hover::after {
     width: 100%;
 }
+
+main {
+    height: 100vh;
+    width: 100%;
+}
+
+footer {
+    height: 275px;
+    width: 100%;
+    background-color: hsla(0, 0%, 20%, 1);
+}
