--- a/style.css
+++ b/style.css
@@ -41,12 +41,14 @@ header a:hover::after {
 }
 
 main {
-    height: 100vh;
-    width: 100%;
+    height: 65rem;
+    width: auto;
 }
+
+
 
 footer {
     height: 275px;
-    width: 100%;
+    width: auto;
     background-color: hsla(0, 0%, 20%, 1);
 }
