--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    font-family: "Darker Grotesque", sans-serif;
 }
 
 header {
@@ -21,8 +22,8 @@ header a {
     font-weight: 700;
     font-size: 1.87rem;
     color: #000;
-    font-family: "Darker Grotesque", sans-serif;
     position: relative;
+    font-family: "Darker Grotesque", sans-serif;
 }
 
 header a::after {
@@ -52,6 +53,29 @@ main {
     width: 60rem;
     height: 55rem;
     border: 4px solid hsla(0, 0%, 20%, 1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+h1 {
+    font-size: 60px;
+    font-weight: 600;
+    padding-top: 20px;
+}
+
+.inputs-adocao {
+    width: 47.5rem;
+    height: 32rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+#btn-enviar {
+    margin-bottom: 20px;
 }
 
 footer {
