--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ main {
 h1 {
     font-size: 60px;
     font-weight: 600;
-    padding-top: 20px;
+    padding-top: 10px;
 }
 
 .inputs-adocao {
@@ -70,8 +70,48 @@ h1 {
     height: 32rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: space-around;
+}
+
+.input-area {
+    display: flex;
+    flex-direction: column;
+}
+
+input {
+    background-color: hsla(0, 0%, 90%, 1);
+    border: 1px solid #000;
+}
+
+.linha1 {
+    display: flex;
+    justify-content: space-between;
+}
+
+label {
+    font-size: 30px;
+    margin-bottom: 8px;
+}
+
+#descricao {
+    height: 15.6rem;
+    resize: none;
+    background-color: hsla(0, 0%, 90%, 1);
+    border: 1px solid #000
+}
+
+#link-foto {
+    height: 2.4rem;
+}
+
+#nome-lobo {
+    height: 2.4rem;
+    width: 35.25rem;
+}
+
+#idade-lobo {
+    height: 2.4rem;
+    width: 11rem;
 }
 
 #btn-enviar {
