--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
+/* GLOBAL */
+
 * {
     box-sizing: border-box;
     font-family: "Darker Grotesque", sans-serif;
 }
+
+/* CABEÇALHO */
 
 header {
     background-color: hsla(202, 85%, 74%, 1);
@@ -16,6 +20,8 @@ header img {
     width: 95.55px;
     height: 110.72px;
 }
+
+/* Links de navegação header */
 
 header a {
     text-decoration: none;
@@ -41,6 +47,8 @@ header a:hover::after {
     width: 100%;
 }
 
+/* SEÇÃO DE ADOÇÃO */
+
 main {
     height: 65rem;
     width: auto;
@@ -64,6 +72,8 @@ h1 {
     font-weight: 600;
     padding-top: 10px;
 }
+
+/* Inputs e labels de adoção */
 
 .inputs-adocao {
     width: 47.5rem;
@@ -116,14 +126,18 @@ label {
     width: 11rem;
 }
 
+/* Botão 'enviar' */
+
 #btn-enviar {
     margin-bottom: 20px;
     background-color: hsla(210, 49%, 34%, 1);
     color: #fff;
     width: 13rem;
-    height: 3.75rem;
+    height: 3.5rem;
     font-size: 30px;
     border: 1px solid #000;
+    padding-bottom: 6px;
+    
 }
 
 #btn-enviar:hover {
@@ -131,8 +145,72 @@ label {
     border: 3px solid #000
 }
 
+/* CABEÇALHO */
+
 footer {
     height: 275px;
     width: auto;
     background-color: hsla(0, 0%, 20%, 1);
+    border-top: 6px solid;
+    border-image: linear-gradient(to right, hsla(43, 67%, 61%, 1), hsla(210, 49%, 34%, 1)) 1;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: #fff;
+    font-family: "Darker Grotesque", sans-serif;
+}
+
+.secao1-footer {
+    display: flex;
+    gap: 50px;
+    margin-left: 180px;
+}
+
+.inf-contato {
+    display: flex;
+    gap: 10px;
+    font-size: 18px;
+    margin-bottom: 15px;
+}
+
+.btn-quem-somos {
+    width: 144px;
+    height: 30px;
+    background-color: hsla(43, 67%, 61%, 1);
+    font-size: 25px;
+    font-weight: 600;
+    border: 2px solid #000;
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    padding-bottom: 5px;
+}
+
+.btn-quem-somos:hover {
+    cursor: pointer;
+    border: 3px solid #000;
+}
+
+.secao1-2-footer {
+    height: 168px;
+    width: 378px;
+    flex-wrap: wrap;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.secao2-footer img {
+    height: 104px;
+    width: 104px;
+    margin-left: 10px;
+}
+
+.secao2-footer {
+    display: flex;
+    flex-direction: column;
+    font-size: 18px;
+    gap: 10px;
+    justify-content: center;
+    margin-right: 180px;
 }
