feat: adc botão "Quem somos" no footer

--- a/style.css
+++ b/style.css
@@ -256,6 +256,10 @@ h1 {
     left: 0px;
     top: 2628px;
 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
     background-color: #353535;
     border: 1px solid black;
 }
@@ -378,6 +382,33 @@ h1 {
     right: 15.79%;
     top: 32%;
     bottom: 30.18%;
+}
+
+.btn {
+    width: 144px;
+    height: 30px;
+    background-color: hsla(43, 67%, 61%, 1);
+    font-size: 15px;
+    font-weight: 600;
+    border: 2px solid #000;
+
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    padding-bottom: 5px;
+
+    position: absolute;
+    left: 36.57%;
+    right: 53.14%;
+    top: 70.55%;
+    bottom: 18.55%;
+
+    background: #DEB959;
+}
+
+.btn:hover {
+    cursor: pointer;
+    border: 3px solid #000;
 }
 
 h3 {
