--- a/styleQS.css
+++ b/styleQS.css
@@ -37,3 +37,72 @@ header a::after {
 header a:hover::after {
     width: 100%;
 }
+
+
+footer {
+    height: 275px;
+    width: auto;
+    background-color: hsla(0, 0%, 20%, 1);
+    border-top: 6px solid;
+    border-image: linear-gradient(to right, hsla(43, 67%, 61%, 1), hsla(210, 49%, 34%, 1)) 1;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: #fff;
+    font-family: "Darker Grotesque", sans-serif;
+}
+
+.secao1-footer {
+    display: flex;
+    gap: 50px;
+    margin-left: 180px;
+}
+
+.inf-contato {
+    display: flex;
+    gap: 10px;
+    font-size: 18px;
+    margin-bottom: 15px;
+}
+
+.btn-quem-somos {
+    width: 144px;
+    height: 30px;
+    background-color: hsla(43, 67%, 61%, 1);
+    font-size: 15px;
+    font-weight: 600;
+    border: 2px solid #000;
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    padding-bottom: 5px;
+}
+
+.btn-quem-somos:hover {
+    cursor: pointer;
+    border: 3px solid #000;
+}
+
+.secao1-2-footer {
+    height: 168px;
+    width: 378px;
+    flex-wrap: wrap;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.secao2-footer img {
+    height: 104px;
+    width: 104px;
+    margin-left: 10px;
+}
+
+.secao2-footer {
+    display: flex;
+    flex-direction: column;
+    font-size: 18px;
+    gap: 10px;
+    justify-content: center;
+    margin-right: 180px;
+}
