--- a/styleQS.css
+++ b/styleQS.css
@@ -38,8 +38,31 @@ header a:hover::after {
     width: 100%;
 }
 
+.titulo {
+    position: absolute;
+    width: 811.59px;
+    height: 56px;
+    left: 293.3px;
+    top: 180px;
+    border: 1px solid black;
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-size: 48px;
+    line-height: 56px;
+    text-align: center;
+
+    color: #000000;
+
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    flex-direction: column;
+}
+
 
 footer {
+    margin-top: 470px;
     height: 275px;
     width: auto;
     background-color: hsla(0, 0%, 20%, 1);
