refactor: mudando nome da classe

--- a/styleQS.css
+++ b/styleQS.css
@@ -38,7 +38,7 @@ header a:hover::after {
     width: 100%;
 }
 
-.titulo {
+.texto {
     position: absolute;
     width: 811.59px;
     height: 56px;
