--- a/styleQS.css
+++ b/styleQS.css
@@ -44,7 +44,10 @@ header a:hover::after {
     height: 56px;
     left: 293.3px;
     top: 180px;
-    border: 1px solid black;
+    
+    display: flex;
+    justify-content: center; 
+    align-items: center;
 
     font-family: 'Roboto';
     font-style: normal;
@@ -53,16 +56,27 @@ header a:hover::after {
     text-align: center;
 
     color: #000000;
-
-    display: flex;
-    justify-content: center; 
-    align-items: center;
-    flex-direction: column;
 }
 
+.descricao {
+    position: absolute;
+    width: 960px;
+    height: 134px;
+    left: 219px;
+    top: 286px;
+
+    font-family: 'Darker Grotesque';
+    font-style: normal;
+    font-size: 24px;
+    line-height: 24px;
+    text-align: center;
+    letter-spacing: 0.155em;
+
+    color: #000000;
+}
 
 footer {
-    margin-top: 470px;
+    margin-top: 350px;
     height: 275px;
     width: auto;
     background-color: hsla(0, 0%, 20%, 1);
