--- a/ListaDeLobinhos/style.css
+++ b/ListaDeLobinhos/style.css
@@ -4,9 +4,10 @@
     padding: 0;
 }
 body{
-    height: 1000px;
+    position: relative;
     display: flex;
     flex-direction: column;
+    
 }
 
 /*Cabeçalho*/
@@ -49,16 +50,12 @@ header a::after {
 header a:hover::after {
     width: 100%;
 }
-
+/*container*/
 #container{
-    line-height: 81.36px;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    margin: auto;
     flex-direction: column;
-    margin-top: 30px;
+    height: 500px;
+
 }
 
 /*Rodapé*/
