--- a/quem-somos/style.css
+++ b/quem-somos/style.css
@@ -98,13 +98,14 @@ footer {
     width: 144px;
     height: 30px;
     background-color: hsla(43, 67%, 61%, 1);
-    font-size: 15px;
+    font-size: 25px;
     font-weight: 600;
     border: 2px solid #000;
     display: flex;
     justify-content: center; 
     align-items: center;
     padding-bottom: 5px;
+    font-family: "Darker Grotesque";
 }
 
 .btn-quem-somos:hover {
@@ -134,4 +135,42 @@ footer {
     gap: 10px;
     justify-content: center;
     margin-right: 180px;
+}
+
+@media (max-width: 1170px) {
+    footer {
+        flex-direction: column;
+        height: auto;
+        padding: 20px;
+        gap: 50px
+    }
+    
+    .secao1-footer {
+        margin-left: 0;
+        justify-content: center;
+    }
+    
+    .secao2-footer {
+        margin-right: 0;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+@media (max-width: 768px) {
+    .secao1-footer, .secao2-footer {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .btn-quem-somos {
+        width: 100%;
+        font-size: 20px;
+    }
+
+    .secao1-2-footer {
+        width: 100%;
+        height: auto;
+    }
 }
