--- a/ListaDeLobinhos/style.css
+++ b/ListaDeLobinhos/style.css
@@ -50,13 +50,84 @@ header a::after {
 header a:hover::after {
     width: 100%;
 }
+/*search lobos*/
+
+#lobos_search {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+#lobos_search input{
+    border: 1px solid black; 
+    padding: 2px; 
+    outline: none; 
+    margin: 20px 5px;
+    width: 600px;
+    height: 35px;
+}
+
+._input_search_lobo{
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#lobos_search button {
+    background: #DEB959;
+    color: white;
+    padding: 5px;
+    font-weight: bold;
+    text-align: center;
+    font-size: 1.2em;
+    height: 80%;
+}
+
 /*container*/
 .container{
     display: flex;
     flex-direction: column;
-    height: 100%;
-
+    justify-content: center;
+    position: relative;
+    align-items: center;
 }
+
+.lobo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 5px solid black;
+    width: 80%;
+    margin: 20px;
+}
+
+.lobo img{
+    width: 50%;
+    height: 50%;
+    position: relative;
+    margin: 40px;
+}
+
+.lobo img::before {
+    content: '';
+    position: absolute;
+    top: -25px;
+    left: -25px;
+    width: 430px;
+    height: 328px;
+    background-color: hsla(210, 49%, 34%, 1);
+    border: 3px #000 solid;
+    z-index: -1;
+}
+
+.container .img {
+    width: 20%;
+}
+
+
+
+
 
 /*Rodapé*/
 footer {
